# scp-bot-discord

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish-dev.yml  docker-publish.yml
bot_handlers/: bot_commands.py  bot_events.py  music.py
src/: main.py
src/bot_handlers/: bot_init.py  music.py
src/scpbot/: __main__.py
src/scpbot/commands/: music.py
src/scpbot/music/: musiccontroller.py  song.py
src/scpbot/utils/: logging_conf.py
