[tool.poetry]
name = "SCP_BOT"
version = "0.1.0"
description = ""
authors = ["Zeusina <kachusov_k@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.2.3"
youtube-dl = "^2021.12.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
