[tool.poetry]
name = "SCP_BOT"
version = "0.1.0"
description = ""
authors = ["Zeusina <kachusov_k@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.2.3"
pynacl = "^1.5.0"
yt-dlp = "^2023.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
