[tool.poetry]
name = "scpbot"
version = "0.1.0"
description = "Discord bot for my friend's server"
authors = ["Zeusina <kachusov_k@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2023.3.4"
"discord.py" = "^2.2.3"
colorama = "^0.4.6"
pynacl = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
